--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>xd</title>
+    <title>HIHI</title>
     <meta name="theme-color" content="#317EFB">
     <meta name="description" content="real">
     <link rel="stylesheet" href="style.css">
   </head>
   
-    <body>
-      <h2>CR RARE SCRIPT O_O <br> how to make cr script!!! 😭😭😭</h2>
-    </body>
     <iframe src="https://www.pornhub.com/embed/ph5dff2b96ee5d1" frameborder="0" width="560" height="340" scrolling="no"
       allowfullscreen></iframe>
 </html>
